fix overflow mobile

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -2,6 +2,9 @@
     html{
         overflow-x: hidden;
     }
+    .row{
+        --bs-gutter-x: 0;
+    }
     .p_marcacao{
         font-family: 'Noto Sans';
         font-style: normal;
